# issue-metrics

./: .gitignore  Dockerfile  Makefile  README.md  auth.py  config.py  discussions.py  issue_metrics.py  json_writer.py  labels.py  markdown_writer.py  most_active_mentors.py  pr_comments.py  pyproject.toml  search.py  test_assignee_integration.py  test_auth.py  test_column_order_fix.py  test_config.py  test_coverage_additions.py  test_issue_metrics.py  test_json_writer.py  test_labels.py  test_markdown_writer.py  test_most_active_mentors.py  test_pr_comments.py  test_search.py  test_sorting_grouping.py  test_time_in_draft.py  test_time_to_close.py  test_time_to_first_response.py  test_time_to_first_review.py  test_time_to_ready_for_review.py  time_in_draft.py  time_to_close.py  time_to_first_response.py  time_to_first_review.py  time_to_merge.py  time_to_ready_for_review.py
.github/: copilot-instructions.md
.github/chainguard/: update-uv-lock.sts.yaml
.github/workflows/: auto-labeler.yml  codeql.yml  contributor_report.yaml  copilot-setup-steps.yml  docker-image.yml  linter.yaml  python-package.yml  release.yml  scorecard.yml  update-uv-lock.yml
