[project]
name = "issue-metrics"
version = "1.0.0"
description = "GitHub Action that measures metrics for GitHub issues, pull requests, and discussions."
requires-python = ">=3.11"
dependencies = [
    "github3-py==4.0.1",
    "numpy==2.4.2",
    "python-dotenv==1.2.2",
    "pytz==2025.2",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "black==26.1.0",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "pylint==4.0.5",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "types-pytz==2026.1.1.20260304",
    "types-requests==2.32.4.20260107",
]
