[project]
name = "issue-metrics"
version = "1.0.0"
description = "GitHub Action that measures metrics for GitHub issues, pull requests, and discussions."
requires-python = ">=3.11"
dependencies = [
    "github3-py==4.0.1",
    "numpy==2.4.6",
    "python-dotenv==1.2.2",
    "pytz==2026.2",
    "requests==2.34.2",
]

[dependency-groups]
dev = [
    "black==26.5.1",
    "flake8==7.3.0",
    "isort==8.0.1",
    "mypy==2.1.0",
    "mypy-extensions==1.1.0",
    "pylint==4.0.5",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "types-pytz==2026.2.0.20260506",
    "types-requests==2.33.0.20260513",
]
